# rmi_poc

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: baaild.yml  build.yml  c-cpp.yml  cc-cpp.yml
src/: main.cpp
src/hook/: hook.cpp  hook.hpp
src/hook/cry_action_rmi/: do_invoke_rmi.cpp  do_invoke_rmi.hpp
